src/test/resources/tests/typeError/arrayCreateTypesAndElements.qg

init {
    val2 = arrayList(:number, 1, 2)
}

run true

input(a,b) true
